# serving_fluids

./: .gitignore  CMakeLists.txt  README.md  package.xml
Milestone1/: GIX_floor_map.pgm  GIX_floor_map.yaml  README.md  grasp.py  milestone1.launch  pick_and-place.py  place.py  stow.py
Milestone2/: README.md
Milestone2/test/: GIX_floor_map.pgm  GIX_floor_map.yaml  Rviz.rviz  nav.py
config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  milestone_1.rviz  milestone_2.rviz  milestone_3.rviz  move_base.yaml  sensors_camera_depthmap.yaml
design/: TODO.md  design-considerations.md  evaluation-metrics.md  milestone-1.md  milestone-2.md
launch/: demo_irl.launch  milestone1.launch  milestone_1.launch  milestone_2.launch  milestone_3.launch  navigation_irl.launch  pick_stow_place_irl.launch
launch/include/: amcl.launch.xml  fetch_gazebo.launch  move_base.launch.xml  moveit.launch  navigation_stack.launch
maps/: floorplan_map.pgm  floorplan_map.yaml  irl_map.pgm  irl_map.yaml
models/: test_floorplan.world
models/coffee_table/: model.sdf
models/floorplan/: model.sdf
models/kitchen_station_table/: model.config  model.sdf
models/rolling_table/: model.config  model.sdf
models/trash_can/: model.config  model.sdf
models/wingback_chair/: model.config  (+1 more)
scripts/: adjust_collision_boxes.py  demo_irl.py  milestone_1.py  milestone_2.py  navigate_irl.py  pick.py  pick_stow_place_irl.py  place.py  quick_setup_milestone_1.py  set_position_estimate.py  stow.py  test_add_collision_objects.py  test_nav.py  tf_listener.py
worlds/: milestone_1.world
(+5 files in other folders)
