<package>
  <name>Serving_fluids</name>
  <version>0.9.2</version>
  <description>
    Demo of Fetch Mobile Manipulator as a robotic waiter for beverages.
  </description>
  <author>James Muir</author>
  <author>Sulaiman Al-Akbari</author>
  <author>Annan Li</author>

  <maintainer email="james@jamesdarrenmuir.com">James Muir</maintainer>

  <license>BSD</license>
  <url>https://github.com/ironmanyu/Serving_fluids</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>fetch_gazebo</run_depend>
  <run_depend>fetch_moveit_config</run_depend>
  <run_depend>fetch_navigation</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_python</run_depend>
  <run_depend>simple_grasping</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
</package>
